Fix deepbox session skipping OAuth2RequestInterceptor for non-API URLs.